[project]
name = "yolotrack"
description = "Based on a YOLO model, it performs object detection, capture, and smooth tracking-based cropping on images."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["ultralytics", "numpy", "opencv-python-headless", "torch", "Pillow"]

[project.urls]
Repository = "https://github.com/tppp2806/ComfyUI-YoloTrack"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/tppp2806/ComfyUI-YoloTrack/wiki"
"Bug Tracker" = "https://github.com/tppp2806/ComfyUI-YoloTrack/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-YoloTrack"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

